--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Khushi Jirge",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.7",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
